--- a/keepalived.conf
+++ b/keepalived.conf
@@ -1,3 +1,5 @@
+#add the same config for all servers while changing vrrp id ( unique one ) and the vrrpip
+
 global_defs {
     enable_script_security
     script_user node
