add servers ip s

--- a/keepalived.conf
+++ b/keepalived.conf
@@ -22,6 +22,10 @@ vrrp_instance VI_1 {
     state MASTER
     priority 100
     virtual_router_id 10
+    mcast_src_ip {
+        server1ip
+        serverNip 
+    }
     virtual_ipaddress {
         x.x.x.x/24 
     }
@@ -39,6 +43,10 @@ vrrp_instance VI_2 {
     state MASTER
     priority 100
     virtual_router_id 11
+    mcast_src_ip {
+        server1ip
+        serverNip 
+    }
     virtual_ipaddress {
         x.x.x.x/24 
     }
@@ -56,6 +64,10 @@ vrrp_instance VI_X {
     state MASTER
     priority 100
     virtual_router_id 12
+    mcast_src_ip {
+        server1ip
+        serverNip 
+    }
     virtual_ipaddress {
         x.x.x.x/24 
     }
